Dockerfile fix, mock payments, change api routes
